# Proxy

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.manager  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  manager.py
app/core/: __init__.py  auth.py  firewall.py  logger.py  manager.py  proxy.py  response.py
app/models/: __init__.py  model.py
app/utils/: __init__.py  helpers.py
core/: proxy.py
docs/: async_support.md  auth.md  firewall.md  motivacao.md
utils/: helpers.py
