[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
uvloop = [
    "uvloop",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "taskipy>=1.14.1",
    "ty>=0.0.1a21",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview=true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR0917', 'PLR0913']


[tool.taskipy.tasks]
check = "uv run ruff check . && uv run ty check"
lint = "uv run ruff format . && uv run ruff check --fix ."
build = "docker compose build && docker compose up -d"

[tool.ty.rules]
unresolved-import = "ignore"
too-many-positional-arguments = "ignore"
